# pkg/apis/pipeline/v1beta1/pipeline_types.go
@@ -124,13 +124,13 @@ type PipelineTask struct {
 	TaskSpec *EmbeddedTask `json:"taskSpec,omitempty"`
 
 	// Conditions is a list of conditions that need to be true for the task to run
-	// Conditions are deprecated, use WhenExpressions instead
+	// Conditions are deprecated, use scoped WhenExpressions instead
 	// +optional
 	Conditions []PipelineTaskCondition `json:"conditions,omitempty"`
 
-	// WhenExpressions is a list of when expressions that need to be true for the task to run
+	// When is a list of scoped or unscoped when expressions that need to be true for the task to run
 	// +optional
-	WhenExpressions WhenExpressions `json:"when,omitempty"`
+	When *UnscopedOrScopedWhenExpressions `json:"when,omitempty"`
 
 	// Retries represents how many times this task should be retried in case of task failure: ConditionSucceeded set to False
 	// +optional
@@ -220,12 +220,14 @@ func (pt PipelineTask) resourceDeps() []string {
 		}
 	}
 	// Add any dependents from when expressions
-	for _, whenExpression := range pt.WhenExpressions {
-		expressions, ok := whenExpression.GetVarSubstitutionExpressions()
-		if ok {
-			resultRefs := NewResultRefs(expressions)
-			for _, resultRef := range resultRefs {
-				resourceDeps = append(resourceDeps, resultRef.PipelineTask)
+	if pt.When != nil {
+		for _, whenExpression := range pt.When.GetWhenExpressions() {
+			expressions, ok := whenExpression.GetVarSubstitutionExpressions()
+			if ok {
+				resultRefs := NewResultRefs(expressions)
+				for _, resultRef := range resultRefs {
+					resourceDeps = append(resourceDeps, resultRef.PipelineTask)
+				}
 			}
 		}
 	}
